--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,4 +2,14 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
   }
+  
+  "customizations": {
+    "codespaces": {
+      "repositories": {
+        "theoparashkevov/emacs-config": {
+          "permissions": "write-all"
+        }
+      }
+    }
+  }
 }
